Исправлен код Hero

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
    
     <main>
         <!--Hero-->
-       <section>
-            <div class="hero">
+       <section class="section hero">
+            <div class="container-hero">
                 <h1 class="hero-tittle">
                     Ефективні рішення для
                     <span class="subtittle">вашого бізнесу</span>
@@ -52,7 +52,7 @@
        </section>
        
        <!--Advantages-->
-       <section>
+       <section class="section advantages">
         <div class="container">
             <ul class="advantages-list">
                 <li class="advantages-item">
