--- a/index.html
+++ b/index.html
@@ -98,23 +98,31 @@
             <ul class="team-list">
               <li class="team-item">
                   <img src="./images/main/photo1.jpg" alt="Фотографія 1" width="270" height="260">
-                  <h3 class="card-tittle">Ігор Дем'яненко</h3>
+                  <div class="team-text">
+                    <h3 class="card-tittle">Ігор Дем'яненко</h3>
                   <p class="card-text">Product Designer</p>
+                  </div>
               </li>
               <li class="team-item">
                   <img src="./images/main/photo2.jpg" alt="Фотографія 2" width="270" height="260">
-                  <h3 class="card-tittle">Ольга Рєпіна</h3>
+                  <div class="team-text">
+                    <h3 class="card-tittle">Ольга Рєпіна</h3>
                   <p class="card-text">Frontend Developer</p>
+                  </div>
               </li>
               <li class="team-item">
                   <img src="./images/main/photo3.jpg" alt="Фотографія 3" width="270" height="260">
-                  <h3 class="card-tittle">Микола Тарасов</h3>
+                  <div class="team-text">
+                    <h3 class="card-tittle">Микола Тарасов</h3>
                   <p class="card-text">Marketing</p>
+                  </div>
               </li>
               <li class="team-item">
                   <img src="./images/main/photo4.jpg" alt="Фотографія 4" width="270" height="260">
-                  <h3 class="card-tittle">Михайло Єрмаков</h3>
+                  <div class="team-text">
+                    <h3 class="card-tittle">Михайло Єрмаков</h3>
                   <p class="card-text">UI Designer</p>
+                  </div>
               </li>
           </ul>
           </div>
@@ -123,7 +131,7 @@
     </main>
     <!--Footer-->
        <footer class="footer">
-        <div class="container">
+        <div class="footer-container">
             <a href="" class="footer-logo"><span>Web</span>Studio</a>
   
               <address class="address">м. Київ, пр-т Лесі Українки, 26</address>
