--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             </nav>
             <ul class="header-list">
               <li class="item">
-                  <a href="mailto:info@devstudio.com" class="header-contact">info@devstudio.com</a>
+                  <a href="mailto:info@devstudio.com" class="header-contact mail">info@devstudio.com</a>
               </li> 
               <li class="item">
-                  <a href="tel:+3809611111" class="header-contact">+38 096 111 11 11</a>
+                  <a href="tel:+3809611111" class="header-contact phone">+38 096 111 11 11</a>
               </li>
             </ul>
             </div>
@@ -42,6 +42,7 @@
     <main>
         <!--Hero-->
        <section class="section hero">
+
             <div class="container-hero">
                 <h1 class="hero-tittle">
                     Ефективні рішення для
@@ -49,6 +50,7 @@
                 </h1>
                 <button type="button" class="hero-button">Замовити послугу</button>
             </div>
+
        </section>
        
        <!--Advantages-->
